# renderer

./: .gitignore  CMakeLists.txt
helloworld/: CMakeLists.txt  main.cpp
rasterizer/: DiffuseFragmentShader.cpp  DiffuseFragmentShader.h  DiffuseVertexShader.cpp  DiffuseVertexShader.h  IFragmentShader.h  IVertexShader.h  Rasterizer.cpp  Rasterizer.h  Vertex.h
sw/: CMakeLists.txt  ScanlineRasterizer.cpp  ScanlineRasterizer.h  Vertex.h  sw.cpp
tools/: Buffer.h  CMakeLists.txt  Canvas.cpp  Canvas.h  CompositeRenderOutput.cpp  CompositeRenderOutput.h  FileRenderOutput.cpp  FileRenderOutput.h  FrameBuffer.cpp  FrameBuffer.h  IRenderOutput.h  Mesh.h  ObjReader.cpp  ObjReader.h  Window.cpp  Window.h  WindowRenderOutput.cpp  WindowRenderOutput.h  barycentric.cpp  barycentric.h  ppm.cpp  ppm.h
viewer/: viewer.cpp
wireframe/: CMakeLists.txt  wireframe.cpp
